+ Добавил переход на новое активити при клике на cardView + Добавил "человеческие" строки в объект и соответствующие им методы немного рефракторинга + Добавил иконки для refresh + Изменил цвета + Добавил иконку приложения + Разместил активити в пакет

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Погода</string>
+    <string name="static_string_city">Данные по городу Новосибирск</string>
 </resources>
