--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="morning_thursday">Утро, Четверг</string>
     <string name="clear_without_cloudiness">Ясно: без осадков</string>
     <string name="press">Атмосферное давление: 770 мм.рт.ст.</string>
-    <string name="wind">Ветер: 3 м/c</string>
+    <string name="wind_p">Ветер: 3 м/c</string>
     <string name="relwet">Относительная влажность воздуха: 88%</string>
     <string name="heat">Температура по ощущениям: -25°C</string>
     <string name="temp28">-28°C</string>
@@ -20,4 +20,5 @@
     <string name="relwet_item">Влажность: 78 %</string>
     <string name="tempr_item">-28°C</string>
     <string name="min_max_tempr_item">-27 | -30</string>
+    <string name="wind">Ветер: </string>
 </resources>
