--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,6 @@
     <string name="data_is_null">Данных нет \nНажмите кнопку \"Обновить\"</string>
     <string name="aboutWeather">Легкий снегопад</string>
     <string name="min_max_tempr_item">-27 | -30</string>
+    <string name="Morning">Утром</string>
 
 </resources>
