--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,6 @@
     <string name="back">Назад</string>
     <string name="gismeteo_base_url">http://informer.gismeteo.ru/xml/</string>
     <string name="city_not_founded">Города по запросу не найдено</string>
+    <string name="chart">Статистика</string>
 
 </resources>
