Fixed bug: the app does not crush if there is no Internet connection * some refactoring with KEY_WORDS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,5 +30,6 @@
     <string name="city_not_founded">Города по запросу не найдено</string>
     <string name="chart">Статистика</string>
     <string name="choose_range">Выбрать диапазон</string>
+    <string name="KEY_SHARED_WEATHER">KEY_SHARED_WEATHER</string>
 
 </resources>
